# Ovayra

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: phase-0-ci.yml  phase-0-device.yml  phase-0-ffmpeg.yml  phase-0-release.yml
.superpowers/sdd/: task-10-report.md  task-11-report.md  task-12-report.md  task-13-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-7-report.md
apps/ovayra-spike/: Cargo.toml  build.rs
apps/ovayra-spike/src/: child_tree.rs  cli.rs  evidence_lint.rs  gate.rs  gemini_orchestration.rs  main.rs  preview_app.rs
apps/ovayra-spike/tests/: evidence_lint.rs  forced_fallback.rs  gate.rs  process_group.rs  tray_lifecycle.rs
apps/ovayra-spike/ui/: spike.slint
crates/spike-contracts/: Cargo.toml
crates/spike-contracts/src/: evidence.rs  lib.rs  matrix.rs  proof.rs
crates/spike-contracts/tests/: evidence_contract.rs  gate_contract.rs  proof_contract.rs
crates/spike-gemini/: Cargo.toml
crates/spike-gemini/src/: client.rs  dto.rs  lib.rs  session.rs
crates/spike-gemini/tests/: resumable_contract.rs
crates/spike-media/: Cargo.toml
crates/spike-media/src/: capability.rs  cpu_fallback.rs  ffmpeg.rs  lib.rs  preview.rs  progress.rs
crates/spike-media/tests/: cpu_fallback.rs  fallback_policy.rs  hardware_plans.rs  preview_frames.rs  progress_contract.rs
crates/spike-platform/: Cargo.toml
crates/spike-platform/src/: envelope.rs  keyring_store.rs  lib.rs  process_group.rs
crates/spike-platform/tests/: envelope.rs
crates/spike-release/: Cargo.toml
crates/spike-release/src/: ffmpeg_policy.rs  lib.rs  manifest.rs  package.rs
crates/spike-release/tests/: ffmpeg_policy.rs  manifest_signature.rs
crates/spike-release/tests/fixtures/: update-test.bin.minisig  update-test.pub  valid-manifest.json
crates/spike-ui-generated/: Cargo.toml  build.rs
crates/spike-ui-generated/src/: lib.rs
docs/adr/: 0005-packaging-update-and-ffmpeg-distribution.md
docs/phase-0/: README.md  feasibility-report.md
docs/superpowers/plans/: 2026-07-17-ovayra-implementation-roadmap.md  2026-07-17-phase-0-feasibility-spikes.md
docs/superpowers/specs/: 2026-07-17-ovayra-local-client-design.md
packaging/: NOTICE.txt  Packager.toml  phase-0-matrix.toml
packaging/licenses/: nv-codec-headers-MIT.txt
packaging/policies/: ffmpeg-lgpl.toml
scripts/: build-ffmpeg-linux.sh  build-ffmpeg-macos.sh  build-ffmpeg-windows-msys.sh  build-ffmpeg-windows.ps1  check-ffmpeg-capabilities.sh  compare-ffmpeg-reproducibility.sh  inspect-native-package.ps1  inspect-native-package.sh  inspect-package-contents.sh  parse-hdiutil-plist.py  test-check-ffmpeg-capabilities.sh  test-compare-ffmpeg-reproducibility.sh  test-ffmpeg-build-structure.sh  test-inspect-package-contents.sh  test-parse-hdiutil-plist.sh  test-phase-0-evidence-workflows.sh  test-phase-0-release-workflow.sh  test-validate-release-producer-event.sh  test-verify-ffmpeg-signature.sh  validate-release-producer-event.sh  verify-ffmpeg-signature.sh  write-package-attestation.py
scripts/fixtures/hdiutil-plist/: duplicate-mounted-entities.plist  missing-mount-point.plist  multiple-mount-points.plist  one-space-name.plist  root-array.plist  split-device-mount.plist  unexpected-field-type.plist
scripts/fixtures/release-producer-events/: branch.json  pr.json  valid-push-tag.json  wrong-repo.json  wrong-sha.json  wrong-tag.json  wrong-workflow.json
