[workspace]
members = [
  "apps/ovayra-spike",
  "crates/spike-contracts",
  "crates/spike-media",
  "crates/spike-gemini",
  "crates/spike-platform",
  "crates/spike-release",
  "crates/spike-ui-generated",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ovayra/ovayra"

[workspace.dependencies]
aes-gcm = "=0.11.0"
anyhow = "=1.0.103"
base64 = "=0.22.1"
clap = { version = "=4.6.2", features = ["derive", "env"] }
command-group = { version = "=5.0.1", features = ["with-tokio"] }
hex = "=0.4.3"
icns = { version = "=0.4.0", default-features = false, features = ["pngio"] }
ico = "=0.5.0"
keyring = "=4.1.5"
minisign-verify = "=0.2.5"
png = "=0.18.1"
predicates = "=3.1.4"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
resvg = "=0.47.0"
semver = { version = "=1.0.28", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
slint = { version = "=1.17.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg", "renderer-software", "system-tray"] }
slint-build = "=1.17.1"
sysinfo = "=0.38.4"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
time = { version = "=0.3.47", features = ["parsing"] }
tokio = { version = "=1.52.4", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "=1.1.3+spec-1.1.0"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
url = { version = "=2.5.8", features = ["serde"] }
unicode-normalization = "=0.1.24"
xz2 = "=0.1.7"
wiremock = "=0.6.5"
zeroize = "=1.9.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
