[package]
name = "spike-gemini"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
spike-platform = { path = "../spike-platform" }

[dev-dependencies]
spike-platform = { path = "../spike-platform" }
wiremock.workspace = true

[lints]
workspace = true
