[package]
name = "spike-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
command-group.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[lints]
workspace = true
