[package]
name = "spike-release"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
hex.workspace = true
minisign-verify.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
