[package]
name = "spike-release"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
base64.workspace = true
hex.workspace = true
minisign-verify.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
url.workspace = true
xz2.workspace = true
tar = "=0.4.46"
tempfile.workspace = true

[lints]
workspace = true

[dev-dependencies]
